tests/bc_interpreter/err_continue_outside_loop.expected
<string>:2:5: error: continue outside a loop
    continue;
    ^^^^^^^^^